cmake_minimum_required(VERSION 3.31)
project(CLionProjects)

set(CMAKE_CXX_STANDARD 20)

add_executable(CLionProjects main.cpp
        CTDLVGT/SS1/b1_ss1.c
        CTDLVGT/SS1/b2_ss1.c
        CTDLVGT/SS1/b3_ss1.c
        CTDLVGT/SS1/b4_ss1.c
        CTDLVGT/SS1/b5_ss1.c
        CTDLVGT/SS1/b6_ss1.c
        CTDLVGT/SS1/b7_ss1.c
        CTDLVGT/SS1/b8_ss1.c
        CTDLVGT/SS3/hh.c
        CTDLVGT/SS4.c
        CTDLVGT/SS5/PTIT_CNTT5_IT201_Session5_Bai9.c
        CTDLVGT/SS15/OnHackAthon.c
)
